# aero-sim

./: .gitignore  README.md  angular.json  package-lock.json  package.json
src/: index.html  styles.css
src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.config.ts
src/app/core/: cesium.service.ts  data-service.service.ts  entity.service.ts
src/app/interfaces/: entity.ts
src/app/layout/navbar/: navbar.component.html  navbar.component.ts
src/app/layout/sidebar/: sidebar.component.html  sidebar.component.ts
src/app/map/: map.component.css  map.component.html  map.component.ts
src/backend/: CMakeLists.txt  drawer.py  main.cpp
src/backend/assets/json/: A320.json
src/backend/core/: Airplane.cpp  Airplane.h  LineBuilder.cpp  LineBuilder.h  Math.cpp  Math.h  PointMath.cpp  PointMath.h
src/backend/module/: CommunicationHandler.cpp  CommunicationHandler.h
